turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:3: error: not found: value Couleur
  val couleurs = List(Couleur.black, Couleur.red, Couleur.yellow, Couleur.purple);
                      ^DiskFour:3: error: not found: value Couleur
  val couleurs = List(Couleur.black, Couleur.red, Couleur.yellow, Couleur.purple);
                                     ^DiskFour:3: error: not found: value Couleur
  val couleurs = List(Couleur.black, Couleur.red, Couleur.yellow, Couleur.purple);
                                                  ^DiskFour:3: error: not found: value Couleur
  val couleurs = List(Couleur.black, Couleur.red, Couleur.yellow, Couleur.purple);
                                                                  ^